Removed margin from main styles to stop horizontal scrolling

--- a/styles/layout-style.module.scss
+++ b/styles/layout-style.module.scss
@@ -4,7 +4,3 @@
   width: 100%;
   padding-bottom: 20px;
 }
-
-.main {
-  margin: 20px;
-}
